build: add uv dependency management with AGNTCY SDK

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-flask
-requests
-flask_cors
-pymongo
-google-auth>=2.30.0
+# ⚠️ DEPRECATED: Use pyproject.toml with uv instead
+#
+# This file is kept for backwards compatibility only.
+# 
+# To install dependencies, use:
+#   uv sync
+#
+# See pyproject.toml for the authoritative dependency list.
